[css] >3:1 contrast ratio for border color Fixes #115

--- a/simple.css
+++ b/simple.css
@@ -11,7 +11,7 @@
   --accent-bg: #f5f7ff;
   --text: #212121;
   --text-light: #585858;
-  --border: #d8dae1;
+  --border: #898EA4;
   --accent: #0d47a1;
   --code: #d81b60;
   --preformatted: #444;
@@ -29,7 +29,6 @@
     --accent-bg: #2b2b2b;
     --text: #dcdcdc;
     --text-light: #ababab;
-    --border: #666;
     --accent: #ffb300;
     --code: #f06292;
     --preformatted: #ccc;
